# spirograph

./: README.md  main.ipynb  main.py  pyproject.toml
src/spirograph/: __init__.py
