[project]
name = "spirograph"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kai", email = "58873594+MySweetEden@users.noreply.github.com" }
]
dependencies = [
    "plotly>=5.20.0",
    "ipykernel>=6.29.3",
    "polars>=0.20.16",
    "pandas>=2.2.1",
    "nbformat>=5.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spirograph"]
